--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,13 @@
   padding: 2rem;
   margin: 2rem;
 }
+
+.card-title {
+  white-space: nowrap;
+}
+
+@media screen and (max-width: 1100px) {
+  .card .card-title {
+    font-size: 20px;
+  }
+}
