styling modifications to index and removed axios and babel scripts as they were getting a 429 too many requests timeout error and causing long load times

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,3 +56,12 @@
 .tabs li.indicator {
   background-color: #FBC02D;
 }
+
+.home-section-partners {
+  padding: 1rem;
+  margin-bottom: 2rem;
+}
+
+.home-section-partners .row h4 {
+  text-transform: uppercase;
+}
