--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,11 @@
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 2rem 0;
-  background: linear-gradient(to bottom right, rgba(0,0,0,0), rgba(0,0,0,.1));
+  background: linear-gradient(
+    to bottom right,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.1)
+  );
   position: relative;
 }
 
@@ -32,17 +36,16 @@
   left: 0;
   background: white;
   padding: 1rem;
-  box-shadow: 3px 3px 12px rgba(0,0,0,.2);
+  box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.2);
 }
-
 
 .wrapper .responsive-img {
   max-width: 50%;
 }
 
 .hero-btn.btn {
- width: 100%;
- margin: 0 20vw;
+  width: 100%;
+  margin: 0 20vw;
 }
 
 .home-hero.row {
@@ -54,7 +57,7 @@
 }
 
 .tabs li.indicator {
-  background-color: #FBC02D;
+  background-color: #fbc02d;
 }
 
 .home-section-partners {
