added head to extracted components and changed from includes to requires in the files, might change back, need to research differences more. linked db on live site, login system is working

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,9 @@
 .parallax-container.page-header {
   height: auto;
 }
+.m1 {
+  margin: 1rem;
+}
 
 .m2 {
   margin: 2rem;
@@ -91,6 +94,9 @@
   margin: 2rem auto;
 }
 
+.ms1 {
+  margin: 0 1rem;
+}
 .ms2 {
   margin: 0 2rem;
 }
@@ -110,4 +116,8 @@
 
 .round-border {
   border-radius: 50px;
+}
+
+span.err {
+  color: red;
 }
