--- a/css/styles.css
+++ b/css/styles.css
@@ -1,65 +1,12 @@
-#login {
-  border-radius: 50px;
-}
-#form {
-  padding: 2rem;
-  margin: 2rem;
-}
-
-.btn.header-login {
-  margin: 0 15px;
-}
-
-.card-title {
-  white-space: nowrap;
-}
-
-@media screen and (max-width: 1100px) {
-  .card .card-title {
-    font-size: 20px;
-  }
-}
-.wrapper {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 2rem 0;
-  background: linear-gradient(
-    to bottom right,
-    rgba(0, 0, 0, 0),
-    rgba(0, 0, 0, 0.1)
-  );
-  position: relative;
-}
-
-.home-hero-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: white;
-  padding: 1rem;
-  box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.2);
-}
-
-.wrapper .responsive-img {
-  max-width: 50%;
-}
-
-.hero-btn.btn {
-  width: 100%;
-  margin: 0 20vw;
-}
-
+/* =================== */
+/* HOMEPAGE STYLES */
+/* =================== */
 .home-hero.row {
   margin-bottom: 0;
 }
 
 .col.p2 {
   padding: 2rem;
-}
-
-.tabs li.indicator {
-  background-color: #fbc02d;
 }
 
 .home-section-partners {
@@ -71,9 +18,14 @@
   text-transform: uppercase;
 }
 
+/* =================== */
+/* PAGE HELPERS */
+/* =================== */
+
 .parallax-container.page-header {
   height: auto;
 }
+
 .m1 {
   margin: 1rem;
 }
@@ -126,6 +78,24 @@ span.err {
   color: red;
 }
 
+/* =================== */
+/* MATERIALIZE OVERRIDES */
+/* =================== */
+
+.card-title {
+  white-space: nowrap;
+}
+
+@media screen and (max-width: 1100px) {
+  .card .card-title {
+    font-size: 20px;
+  }
+}
+
+.tabs li.indicator {
+  background-color: #fbc02d;
+}
+
 .side-nav .collapsible-header,
 .side-nav.fixed .collapsible-header {
   line-height: 48px;
@@ -148,3 +118,40 @@ span.err {
 .collection .collection-item {
   border-bottom: 1px solid #FBC02D;
 }
+
+/* =================== */
+/* COMPONENT STYLES */
+/* =================== */
+
+.construction {
+  width: 100%;
+  padding: 300px 60px;
+  font-size: 48px;
+  font-weight: bold;
+  height: 260px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 2px 3px 7px #00fffb, 3px 4px 8px rgba(0,0,0,.4), 4px 5px 8px rgba(0,0,0,.3), 5px 6px 8px rgba(0,0,0,.2), 6px 7px 9px rgba(0,0,0,.1);
+  color: #6dff49;
+  background: repeating-linear-gradient(50deg, #FDD835 0%, #FDD835 5%, black 5%, black 10%);
+  animation: name duration timing-function delay iteration-count direction fill-mode;
+  animation: pulse 5s ease infinite alternate forwards;
+}
+
+@keyframes pulse {
+  0% {
+    color: #00fffb;
+  }
+  33% {
+    /* color: #6d49ff; */
+    color: white;
+  }
+  66% {
+    color: #ff4949;
+  }
+}
+
+
+
