aded mailerlist table and join method and a custom 404

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,23 @@
 }
 
 /* =================== */
+/* 404 STYLES */
+/* =================== */
+#img-wrapper404 {
+  position: relative;
+}
+
+#img404 {
+  width: 100%;
+}
+
+#btn404 {
+  position: absolute;
+  bottom: 10%;
+  left: 10%;
+}
+
+/* =================== */
 /* PAGE HELPERS */
 /* =================== */
 
